@@ -1,6 +1,11 @@
 # ChangeLog for sys-kernel/linux-headers
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-headers/ChangeLog,v 1.291 2009/07/25 18:29:30 halcy0n Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-headers/ChangeLog,v 1.292 2009/08/17 20:38:37 vapier Exp $
+
+  17 Aug 2009; Mike Frysinger <vapier@gentoo.org>
+  linux-headers-2.6.27-r2.ebuild, linux-headers-2.6.28-r1.ebuild,
+  linux-headers-2.6.29.ebuild, linux-headers-2.6.30-r1.ebuild:
+  Depend on xz-utils or lzma-utils.
 
 *linux-headers-2.6.30-r1 (25 Jul 2009)
 
